--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -7,7 +7,7 @@
   gap: 2rem;
 }
 
-.container .profile img {
+.container .profile .profileImage {
   border-radius: 50%;
   height: 100px;
   width: 100px;
